--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '7.3.0-beta05' apply false
-    id 'com.android.library' version '7.3.0-beta05' apply false
+    id 'com.android.application' version '7.3.0-rc01' apply false
+    id 'com.android.library' version '7.3.0-rc01' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.0' apply false
 }
