--- a/base/build.gradle
+++ b/base/build.gradle
@@ -49,7 +49,7 @@ android {
 }
 
 dependencies {
-    api("androidx.core:core-ktx:1.7.0")
+    api('androidx.core:core-ktx:1.7.0')
 
     appFrame.each {
         if (it.key.toString().startsWith("api")) {
